--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title">Detail</h4>
+        <h4 class="modal-title">詳細</h4>
       </div>
       <div class="modal-body" id="event-detail"></div>
     </div>
